2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call gt_FUNC_SETENV.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call gt_TMPDIR and gt_FUNC_MKDTEMP.

2001-09-03  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call gt_PROG_LEX.

2001-08-26  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Remove parse_printf_format check.

2001-07-28  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Don't call AC_REVISION. It modifies configure.in
	during "cvs commit" after "make dist".

2001-07-28  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (AC_OUTPUT): Add man/x-to-1.

2001-07-26  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (configure.in): Remove automake bug workarounds, not
	needed anymore with automake-1.4-p5.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Remove assignment.

2001-08-02  Bruno Haible  <haible@clisp.cons.org>

	* README: Change bug report address to <bug-gnu-gettext@gnu.org>.
	* configure.in: Likewise.

2001-07-31  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (AUTOMAKE_OPTIONS): Bump to 1.4. Use option 'gnu', not
	'gnits', to avoid distributing README-alpha.

2001-06-30  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call gt_STDBOOL_H.

2001-06-25  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ACLOCAL_VERSION): Remove.

2001-06-25  Bruno Haible  <haible@clisp.cons.org>

	* aclocal.sh: Tweak last patch for automake-1.4f.

2001-06-23  Bruno Haible  <haible@clisp.cons.org>

	* aclocal.sh: Don't fail if aclocal isn't available.

2001-06-15  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Remove post-processing of tests/Makefile.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Add test for cross compilation and for PERL.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Bump version number to 0.11.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>
