@@ -51,7 +51,7 @@ AC_FUNC_ALLOCA
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([getcwd mblen memcpy posix_spawn select strchr strerror uname])
 AC_REPLACE_FUNCS([memmove memset stpcpy stpncpy strcspn \
-strcasecmp strncasecmp strstr strtoul vasprintf])
+strcasecmp strncasecmp strpbrk strstr strtoul vasprintf])
 AM_FUNC_GETLINE
 if test $am_cv_func_working_getline != yes; then
   AC_CHECK_FUNCS(getdelim)
