@@ -1,5 +1,9 @@
 2001-09-06  Bruno Haible  <haible@clisp.cons.org>
 
+	* configure.in: Add AC_REPLACE_FUNCS of strpbrk.
+
+2001-09-06  Bruno Haible  <haible@clisp.cons.org>
+
 	* configure.in: Call gt_FUNC_SETENV.
 
 2001-09-02  Bruno Haible  <haible@clisp.cons.org>
